# models/index.ts
@@ -1,7 +1,10 @@
 export * from "./album-insert-data";
 export * from "./album-response";
 export * from "./album-update-data";
+export * from "./claims-encoded";
+export * from "./login-response";
 export * from "./media-response";
 export * from "./new-album-media";
 export * from "./new-user";
+export * from "./user-info";
 export * from "./user-login";
